# labelsquor-api

./: .flake8  .gcloudignore  .gitignore  CRAWLER_SOLUTION.md  CRAWLER_STATUS.md  DATABASE_SETUP_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_WORKFLOW.md  Dockerfile  GITHUB_DEPLOYMENT_SETUP.md  Makefile  PROJECT_STRUCTURE.md  README.md  README_MODERN_ARCHITECTURE.md  SQUOR_V2_IMPLEMENTATION.md  TOKEN_TRACKING_SOLUTION.md  alembic.ini  deploy-to-production.sh  docker-compose.yml  env.example  maggi_product_images.html  product_analyzer.py  prompt_comparison.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: crawl-products.yml  deploy-to-gcp.yml
alembic/: README.md  env.py  script.py.mako
alembic/versions/: 20250916_1055-83e20b278cac_add_workflow_state_management.py  20250916_1057-3abc3b73b4a9_add_quota_management.py  20250916_1200-9538030417b5_make_product_id_optional_in_processing_.py  20250922_1432-2a17e29d841f_add_content_hash_and_source_to_product_.py  20250922_1443-8f823dc3e650_add_comprehensive_ai_analysis_models.py  20250922_1557-52d4b7effb51_add_product_identification_fields.py
api/contracts/: api.md
app/: __init__.py  main.py  middleware.py
app/api/: deps.py
app/api/v1/: __init__.py  brands.py  categories.py  crawler.py  health.py  products.py  quota.py  search.py  workflow.py
app/cli/: crawler_commands.py
app/core/: cache.py  config.py  crawler_config.py  database.py  exceptions.py  logging.py  production_config.py  quota_manager.py  security.py  taxonomy.py  workflow.py
app/middleware/: __init__.py  request_id.py  security.py  timing.py
app/models/: __init__.py  ai_analysis.py  brand.py  category.py  category_extended.py  claim_analysis.py  crawler_config.py  discovery.py  facts.py  ops.py  product.py  retailer.py  score.py  source.py
app/repositories/: __init__.py  base.py  brand.py  category.py  facts.py  processing_queue.py  product.py  retailer.py  source.py
app/schemas/: __init__.py  brand.py  category.py  common.py  facts.py  product.py  quota.py  score.py  workflow.py
app/services/: __init__.py  ai_analysis_service.py  ai_pipeline_service.py  brand_service.py  crawler_service.py  discovery_orchestrator.py  enhanced_product_workflow.py  enrichment_service.py  image_hosting_service.py  parsing_service.py  pipeline_service.py  product_consolidator.py  product_matcher.py  product_matcher_oss.py  product_service.py  product_workflow.py  scoring_service.py  simple_bigbasket_parser.py  squor_scoring_service.py
app/utils/: content_hash.py  normalization.py  product_identification.py
configs/: .env.example
configs/crawler/: README.md  categories.yaml  search_terms.yaml
crawlers/: .gitignore  ANTIBLOCK_GUIDE.md  CLOUD_DEPLOYMENT.md  Dockerfile  GCP_BLOCKING_SOLUTIONS.md  PRODUCT_DISCOVERY.md  PROXY_CRAWLER_GUIDE.md  README.md  TEST_ANTIBLOCK_API.md  bigbasket_results.json  cloudbuild.yaml  crawler_service.py  deploy-crawler.sh  docker-compose.yml  maggi_products.json  requirements.txt  run_crawler.py  sample_crawl_results.json  scrapy.cfg  simple_bigbasket_parser.py  simple_proxy_crawler.py  test_crawl_maggi.py  test_integrated_flow.py  test_proxy_crawler.py
crawlers/labelsquor_crawlers/: __init__.py  items.py  middlewares.py  middlewares_v2.py  pipelines.py  settings.py  settings_gcp.py
crawlers/labelsquor_crawlers/adapters/: __init__.py  base.py  bigbasket.py  blinkit.py  factory.py
crawlers/labelsquor_crawlers/antiblock/: __init__.py  base.py  retailers.py
crawlers/labelsquor_crawlers/spiders/: __init__.py  base.py  bigbasket.py  bigbasket_discovery.py  bigbasket_playwright.py  (+1 more)
data/: crawler_seeds.json
dbt/models/: schema.yml
docs/: ALEMBIC_AUTOGENERATE_GUIDE.md  ALEMBIC_MIGRATION_GUIDE.md  API_DOCUMENTATION.md  COMPLETE_FLOW_WITH_IMAGES.md  COMPLETE_IMPROVEMENTS_SUMMARY.md  CRAWLER_ARCHITECTURE.md  DATABASE_IMPROVEMENTS.md  DEPENDENCY_IMPROVEMENTS.md  DEPLOY_DOCKER.md  DEPLOY_RAILWAY.md  DEPLOY_RAILWAY_SUPABASE.md  DEPLOY_RENDER.md  DataStoreDesign.md  IMAGE_HOSTING_SETUP.md  IMPROVEMENTS_SUMMARY.md  ML_MODELS_GUIDE.md  PRODUCTION_DEPLOYMENT.md  QUOTA_MANAGEMENT.md  WORKFLOW_IMPROVEMENTS.md
examples/: product_deduplication_demo.py  queries.sql
migrations/: V1__init_core.sql  V2__categories.sql  V3__crawler_pipeline.sql  V4__squor_metrics_update.sql  V5__enhanced_claims_scoring.sql  V6__workflow_state_management.sql  V7__quota_management.sql
requirements/: README.md  base.txt  crawler.txt  dev.txt  ml.txt  production.txt
scripts/: clear_database.py  migrate.py  reset_database.py  seed_category_mappings.py  setup_database.py  setup_supabase_bucket.py
tests/: conftest.py  test_api_health.py
tests/e2e/: test_api_e2e.py
tests/integration/: test_actual_crawl.py  test_complete_flow.py  test_database_connection.py  test_flow_structure.py  test_real_crawl.py
(+5 files in other folders)
